force-app/main/default/objects/Account/fields/customExtIdField__c.field-meta.xml
<CustomField>
    <fullName>customExtIdField__c</fullName>
    <externalId>true</externalId>
    <label>customExtIdField</label>
    <length>18</length>
    <type>Text</type>
</CustomField>