force-app/main/default/objects/Account/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>EndTime</label>
    <type>Time</type>
</CustomField>