force-app/main/default/objects/Account/fields/Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>Rating_Score__c</fullName>
    <label>Rating (Score)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>