force-app/main/default/objects/Account/validationRules/Annual_RevenueDummyTest.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_RevenueDummyTest</fullName>
    <active>false</active>
    <description>Annual revenue</description>
    <errorConditionFormula>AnnualRevenue &lt; 100000</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual Revenue should be more than 100000</errorMessage>
</ValidationRule>